--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,14 @@ spring.mvc.view.suffix=.jsp
 logging.level.com.giftclub=TRACE
 
 
-#spring.datasource.dbcp2.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@10.74.100.211:1521/ORCL19C
-#spring.datasource.username=academy1
-#spring.datasource.password=academy1 
+# oracle driver
+spring.datasource.dbcp2.driver-class-name=oracle.jdbc.driver.OracleDriver
+# oracle url => [@IP:PORT/SID]
+spring.datasource.url=jdbc:oracle:thin:@10.74.100.211:1521/ORCL19C
+# [DB계정명]
+spring.datasource.username=academy5
+# [DB 계정 비밀번호]
+spring.datasource.password=ACADEMY5
 
 # 커넥션풀
 spring.datasource.hikari.connection-timeout=30000
@@ -19,11 +23,11 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.max-lifetime=1800000
 
 # mapper.xml 위치 지정
-#mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.mapper-locations=classpath:mappers/**/*.xml
 # mapper 패키지 명을 생략할 수 있도록 alias 설정
-#mybatis.type-aliases-package=com.example.demo.domain
-# model 프로퍼티 camel case 설정
-#mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.demo.domain
+#model  프로퍼티 camel case 설정
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # 파일의 최대 사이즈 default 1MB
 spring.servlet.multipart.max-file-size=10MB
@@ -39,5 +43,7 @@ logging.level.hello.springmvc=info
 
 #server.error.whitelabel.enabled=true
 #server.error.path=/error
+
+server.port=10100
 
 
