--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.hikari.max-lifetime=1800000
 # mapper.xml 위치 지정
 mybatis.mapper-locations=classpath:mappers/**/*.xml
 # mapper 패키지 명을 생략할 수 있도록 alias 설정
-mybatis.type-aliases-package=com.example.demo.domain
+mybatis.type-aliases-package=com.example.pion.domain
 #model  프로퍼티 camel case 설정
 mybatis.configuration.map-underscore-to-camel-case=true
 
