--- a/pom.xml
+++ b/pom.xml
@@ -64,19 +64,19 @@
 			<artifactId>jstl</artifactId>
 		</dependency>
 		
-		<!-- <dependency>
+		 <dependency>
 		    <groupId>com.oracle.database.jdbc</groupId>
 		    <artifactId>ojdbc11</artifactId>
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency> -->
-       <!--  <dependency>
+        </dependency>
+         <dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
 		    <version>2.2.1</version>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
