--- a/testPjt/pom.xml
+++ b/testPjt/pom.xml
@@ -4,7 +4,7 @@
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>spring4</groupId>
-	<artifactId>ch02_pjt_01</artifactId>
+	<artifactId>testPjt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
